--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ python:
 
 install:
   - pip install -r requirements.txt
-  - pip install -r api-requirements.txt
+  - pip install -r api-requirments.txt
 
 script:
   - pytest --cov=./
