--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ install:
   - pip install -r api-requirments.txt
 
 script:
-  - pytest --cov=./
+  - python -m pytest --cov=./
 
 after_success:
   - codecov
